crates/courier-ftp/src/components/dialog/snapshots/courier_ftp__components__dialog__snapshot_tests__snap_form_all_widgets_160x48.snap
---
source: crates/courier-ftp/src/components/dialog/snapshot_tests.rs
expression: "h.render(160, 48)"
---
 Quickconnect (not available yet)                                                                                                                               
 1 Local                                                                                                                                                        
┌ Message log ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│(not available yet)                                                                                                                                           │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏▶Local ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ Remote ──────────────────────────────────────────────────────────────────────┐
┃(not available yet)                                                           ┃│(not available yet)                                                           │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                 ┌ Site settings ───────────────────────────────────────────┐                                                 │
┃                                                 │ ▶Host             │ example.org                          │                                                 │
┃                                                 │  Password         │                                      │                                                 │
┃                                                 │  Port             │ 22                                   │                                                 │
┃                                                 │  Passive mode     │ [x]                                  │                                                 │
┃                                                 │  Execute          │ [-]                                  │                                                 │
┃                                                 │  Protocol         │ SFTP                               ▾ │                                                 │
┃                                                 │  Transfer mode    │ (•) Auto  ( ) ASCII  ( ) Binary      │                                                 │
┃                                                 │  Remote directory │ /var/www                             │                                                 │
┃                                                 │  Comments         │ first line                           │                                                 │
┃                                                 │                     second line                          │                                                 │
┃                                                 │  Columns          │ [x] Name                             │                                                 │
┃                                                 │                     [x] Size                             │                                                 │
┃                                                 │                     [ ] Owner                            │                                                 │
┃                                                 │ Server name or IP address                                │                                                 │
┃                                                 │                    [ OK ]  [ Cancel ]                    │                                                 │
┃                                                 └──────────────────────────────────────────────────────────┘                                                 │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────────────────────────┘
┌ Queue ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│(not available yet)                                                                                                                                           │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 DIALOG                                                                                                                                       F1 help  F10 quit
